--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@types/crypto-js": "^4.0.2",
+    "crypto-js": "^4.1.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.0-rc.2",
     "rxjs": "~7.4.0",
