--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
+    "@angular/cdk": "^13.0.2",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
@@ -20,6 +21,7 @@
     "@angular/router": "~13.0.0",
     "@types/crypto-js": "^4.0.2",
     "crypto-js": "^4.1.1",
+    "primeflex": "^3.1.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.0-rc.2",
     "rxjs": "~7.4.0",
